# rbgNeuralNet

./: .gitignore  CMakeLists.txt  convnet.hpp  flat_exp_learner.cpp  flat_exp_learner.hpp  flat_mean_learner.cpp  flat_mean_learner.hpp  flatlearner.cpp  flatlearner.hpp  neuralnet.hpp  reasoner.cpp  reasoner.hpp  rl_model.hpp  shallownet.cpp  shallownet.hpp  state_parser.cpp  state_parser.hpp  test.cpp
state_parsers/inc/: convnet_state_parser.hpp  default_state_parser.hpp
state_parsers/src/: convnet_state_parser.cpp  default_state_parser.cpp
torch_modules/inc/: net_module.hpp  shallownet.hpp
torch_modules/src/: shallownet.cpp
